overflow fix

--- a/style.css
+++ b/style.css
@@ -8,12 +8,8 @@
 }
 
 html, body {
-  overflow-x: hidden;
+  overflow-x: hidden !important;
   width: 100%;
-}
-
-body {
-  position: relative
 }
 
 html {
@@ -80,6 +76,7 @@ textarea:focus {
 .container {
   padding: 50px 0;
   width: 100%;
+  overflow-x: hidden !important;
 }
 
 .row {
